--- a/app/components/editor/editor.scss
+++ b/app/components/editor/editor.scss
@@ -72,3 +72,20 @@ body {
     padding: 1rem 1.5rem;
   }
 }
+
+.tiptap {
+  :first-child {
+    margin-top: 0;
+  }
+
+  .mention {
+    background-color: var(--purple-light);
+    border-radius: 0.4rem;
+    box-decoration-break: clone;
+    color: var(--purple);
+    padding: 0.1rem 0.3rem;
+    &::after {
+      content: "\200B";
+    }
+  }
+}
